[gd_scene load_steps=15 format=2]

[ext_resource path="res://art/Shaders/light2.png" type="Texture" id=1]
[ext_resource path="res://art/Sprites_NPC/tata.png" type="Texture" id=2]
[ext_resource path="res://NPC's/Tata/tata.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 480, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 240, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 480, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 480, 240, 240 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 240, 480, 240, 240 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=10]
resource_name = "Nowa animacja"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.9, 0.95 ]
}

[sub_resource type="CircleShape2D" id=11]
radius = 327.277

[node name="StaticBody2D" type="StaticBody2D"]
script = ExtResource( 3 )

[node name="Particles2D" type="CPUParticles2D" parent="."]
position = Vector2( -47.9626, -114.925 )
emission_shape = 3
emission_points = PoolVector2Array( 116, 92, 116, 93, 116, 94, 116, 95, 117, 92, 117, 93, 117, 94, 117, 95, 118, 92, 118, 93, 118, 94, 118, 95, 119, 92, 119, 93, 119, 94, 119, 95 )
emission_colors = PoolColorArray(  )
gravity = Vector2( 0, -30 )
scale_amount = 3.0
color = Color( 0.772549, 0.00392157, 0.00392157, 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 3.92862 )
frames = SubResource( 9 )
frame = 2
playing = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 75.8674, 76.8497, 19.9463, 98.9643, -16.5806, 97.1825, -42.4167, 77.5827, -31.7259, 61.5466, -0.544403, 53.5285, 72.5038, 47.8388 )

[node name="Light2D" type="Light2D" parent="."]
visible = false
position = Vector2( 68.5472, -15.5908 )
scale = Vector2( 0.722343, 0.722343 )
texture = ExtResource( 1 )
texture_scale = 0.94

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Nowa animacja" = SubResource( 10 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
visible = false
polygon = PoolVector2Array( -14.5075, 90.4857, -12.1478, 67.8327, -18.283, 21.1109, -21.5866, -6.26141, -42.8238, 27.7181, -34.8008, -20.4195, -20.1708, -54.8709, -15.9233, -91.2101, 14.7526, -94.9856, 27.0229, -53.4551, 44.4846, -13.3405, 52.5076, 10.2564, 74.2167, -24.195, 69.4973, 48.0114, 17.1123, 103.7 )

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 11 )
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
